@@ -3406,6 +3406,14 @@ Usage:  qucsedit [-r] file
         <source>vhdl</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>representation during DC analysis</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>relax time step raster</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
