@@ -1,3 +1,7 @@
+2006-04-27  Stefan Jahn  <stefan@lkcc.org>
+
+	* sparamfile.cpp (SParamFile): Added new 'duringDC' property.
+
 2006-01-31  Stefan Jahn  <stefan@lkcc.org>
 
 	* coaxialline.cpp (CoaxialLine): Applied some useful default
