@@ -1,3 +1,8 @@
+2006-04-27  Stefan Jahn  <stefan@lkcc.org>
+
+	* library/Diodes.lib: Added BAS40 and BAS70 models from
+	Philips.
+
 2006-01-04  Stefan Jahn  <stefan@lkcc.org>
 
 	* library/Transistors.lib: Added some more transistor models
